--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">platform</string>
     <string name="login">登 录</string>
-    <string name="username">username</string>
+    <string name="username">用户名</string>
     <string name="sncode">设备序列号：</string>
+    <string name="action_settings">Settings</string>
+    <string name="scanInfo">扫描信息</string>
+    <string name="exitScanWeb">退出扫描界面</string>
+    <string name="saveToFile">保存</string>
 </resources>
